crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__e2e_pretty_failures_degradation.snap
---
source: crates/cli/src/progress/pretty.rs
expression: "e2e_full_output(&r, &buf, &scan)"
---
  ⚠ RPM packages                 613 packages, 6 repos (rpm verify timed out)
  ✓ Services                     42 units
  ✓ Storage                      done
  ✓ Kernel & boot                done
  ✗ Network                      failed: timeout connecting to NetworkManager
  ✓ Containers                   3 found
  ✓ Users & groups               done
  ✓ Scheduled tasks              5 timers
  ✓ Config files                 37 modified
  ○ SELinux                      skipped (disabled)
  ✓ Non-RPM packages             2 ecosystems
      pip packages 23 · npm packages 69

  ┄┄┄
  37 modified configs · 23 pip packages · 69 npm packages

  Inspected in 18s (1 failed, 1 degraded, 1 skipped)
  Report: /tmp/inspectah-report.tar.gz
  To review: inspectah refine /tmp/inspectah-report.tar.gz
