crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__e2e_pretty_fast_scan.snap
---
source: crates/cli/src/progress/pretty.rs
expression: "e2e_full_output(&r, &buf, &scan)"
---
  ✓ RPM packages                 613 packages, 6 repos
  ✓ Services                     42 units
  ✓ Storage                      done
  ✓ Kernel & boot                done
  ✓ Network                      done
  ✓ Containers                   3 found
  ✓ Users & groups               done
  ✓ Scheduled tasks              5 timers
  ✓ Config files                 37 modified
  ✓ SELinux                      done
  ✓ Non-RPM packages             2 ecosystems
      pip packages 23 · npm packages 69

  ┄┄┄
  58 version changes (54 target-newer, 4 host-newer)
  37 modified configs · 23 pip packages · 69 npm packages

  Inspected in 12s
  Report: /tmp/inspectah-report.tar.gz
  To review: inspectah refine /tmp/inspectah-report.tar.gz
