crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_arrival_order.snap
---
source: crates/cli/src/progress/pretty.rs
expression: text
---
  ✓ Network                      done
  ✓ Services                     42 units
  ✓ RPM packages                 613 packages, 6 repos
