crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_footer_completed.snap
---
source: crates/cli/src/progress/pretty.rs
expression: "finalize_output(&r, &buf, &scan)"
---

  Inspected in 2.5s
  Report: /tmp/host-report.tar.gz
  To review: inspectah refine /tmp/host-report.tar.gz
