crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_footer_completed_with_sensitivity.snap
---
source: crates/cli/src/progress/pretty.rs
expression: "finalize_output(&r, &buf, &scan)"
---

  Inspected in 3.0s
  Report: /tmp/report.tar.gz
  To review: inspectah refine /tmp/report.tar.gz
  Note: Report may contain sensitive data.
  Review before sharing.
