crates/cli/src/progress/snapshots/inspectah__progress__pretty__tests__pretty_footer_inspect_only.snap
---
source: crates/cli/src/progress/pretty.rs
expression: "finalize_output(&r, &buf, &scan)"
---

  Inspected in 4s
  Output: /tmp/inspect.json
